name:                GitPrompt
version:             2.3.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/GitPrompt#readme
license:             BSD3
license-file:        LICENSE
author:              Nicola Bonelli
maintainer:          nicola@pfq.io 
copyright:           2017 Nicola Bonelli
category:            Shell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable GitPrompt
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Git
                       Colors
                       Options
                       Paths_GitPrompt
  default-language:    Haskell2010
  build-depends:       base >=4.6,
                       ansi-terminal,
                       directory,
                       process,
                       split,
                       transformers,
                       mtl,
                       monad-parallel,
                       unix,
                       filepath,
                       optparse-applicative
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N 

