name:                GitPrompt
version:             2.10.0
-- synopsis:
-- description:
homepage:            https://github.com/awgn/GitPrompt
license:             BSD3
license-file:        LICENSE
author:              Nicola Bonelli
maintainer:          nicola@pfq.io
copyright:           2017 Nicola Bonelli
category:            Shell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

flag StaticBuild {
    Description: "Enable static build"
    Default: False
}

executable GitPrompt
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Git
                       Netns
                       Colors
                       Options
                       Paths_GitPrompt
  default-language:    Haskell2010
  build-depends:       base >=4.6,
                       ansi-terminal,
                       directory,
                       process,
                       split,
                       transformers,
                       mtl,
                       monad-parallel,
                       unix,
                       filepath,
                       optparse-applicative,
                       tuple
  ghc-options:         -O2
                       -Wall
                       -funbox-strict-fields
                       -fwrite-ide-info
                       -hiedir=.hie
                       -threaded
                       -optl-static -optl-pthread
                       -rtsopts "-with-rtsopts=-N -qm"


  if flag (StaticBuild) {
    ghc-options:       -O2
                       -Wall
                       -funbox-strict-fields
                       -fwrite-ide-info
                       -hiedir=.hie
                       -threaded
                       -optl-static -optl-pthread

  }
  else {
    ghc-options:       -O2
                       -Wall
                       -funbox-strict-fields
                       -fwrite-ide-info
                       -hiedir=.hie
                       -threaded
  }
